game of life: add donut world
Signed-off-by: Christoph Lipka <c.lipka@hotmail.com>

--- a/gameoflife/index.html
+++ b/gameoflife/index.html
@@ -11,6 +11,13 @@
         <input type="text" id="x" name="x" value="10"><br><br>
         <label for="y">y:</label>
         <input type="text" id="y" name="y" value="10"><br><br>
+
+        <p>Universum:</p>
+        <input type="radio" id="flat" name="universum" value="flat" checked="checked">
+        <label for="flat">Flaches Universum</label><br>
+        <input type="radio" id="donut" name="universum" value="donut">
+        <label for="donut">Donut Universum</label><br>
+        <br>
         <button class="btn_game" id="btn_generate" onclick="create()">Spielfeld erzeugen</button>
         <button class="btn_game" id="btn_start" onclick="start()">Spiel Starten</button>
         <button class="btn_game" id="btn_stop" onclick="stop()">Stop</button>
