align folder structure
Signed-off-by: Christoph Lipka <c.lipka@hotmail.com>

--- a/ticktacktoe/index.html
+++ b/ticktacktoe/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>TickTackToe</title>
-        <link href="main.css" rel="stylesheet"/>
+        <link href="css/main.css" rel="stylesheet"/>
     </head>
     <body>
         <h1>TicTacToe</h1>
@@ -19,6 +19,6 @@
             <button class="tictactoe_button_disabled" id="8" onclick="setzen(event)" disabled></button>
             <button class="tictactoe_button_disabled" id="9" onclick="setzen(event)" disabled></button>
         </div>
-        <script src="main.js" />
+        <script src="js/main.js" />
     </body>
 </html>
