--- a/gameoflife/index.html
+++ b/gameoflife/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Game of Life</title>
-        <link href="main.css" rel="stylesheet"/>
+        <link href="css/main.css" rel="stylesheet"/>
     </head>
     <body>
         <h1>Game of Life</h1>
@@ -25,6 +25,6 @@
         <p id="p_result"></p>
         <div id="universe">
         </div>
-        <script src="main.js" />
+        <script src="js/main.js" />
     </body>
 </html>
